[package]
name = "calcbits"
version = "0.1.0"
edition = "2024"
authors = ["Ariel Zvinowanda <taperazvi@gmail.com>"]
description = "Small utilities for working with downloaded binary data: formatting, timing and CLI progress helpers."
license = "MIT"
repository = "https://github.com/Kazan20/calcbits" # add your repository URL before publishing
keywords = ["progress", "download", "hex", "octal", "cli", "util", "bits"]
readme = "README.md"

[dependencies]
indicatif = "0.17"
reqwest = { version = "0.11", features = ["stream", "gzip", "brotli", "deflate"] }
futures-util = "0.3"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "fs"] }